--- a/Equation/Equations.tex
+++ b/Equation/Equations.tex
@@ -10,77 +10,58 @@
 \begin{document}
 
 \section{ Trigonometric equations}
-
-a) $\quad \sin x=-\frac{1}{2}$\\
-
-b) $\quad \sin x=\frac{\sqrt{2}}{2}$\\
-
-c) $\quad \tan x=\frac{\sqrt{3}}{3}$\\
-
-d) $\quad \sin ^2 x=\frac{1}{2}$\\
-
-e) $\quad \cos \left(\frac{\pi}{4}-x\right)=1$\\
-
-f) $\quad \sin \left(\frac{\pi}{3}-x\right)=-\frac{1}{2}$\\
-
-g) $2 \sin ^2 x=\sqrt{2} \sin x$\\
-
-h) $\cot ^2 x=-\cot x$\\
-
-i) $\quad \sin ^2 x-\cos ^2 x+\sin x=0$\\
-
-j) $\quad 2 \tan x-3 \cot x=1$\\
-
-k) $\quad 3 \tan ^2 x+4 \sqrt{3} \tan x+3=0$\\
-
-l) $\quad \sqrt{3} \cot ^2 x-2 \cot x-\sqrt{3}=0$\\
-
-m) $\frac{\sqrt{3}}{\sin ^2 x}+4 \cot x=0$\\
-
-n) $\frac{\tan x+1}{\tan x-1}=2+\sqrt{3}$\\
-
-o) $2 \cos ^2 x-7 \cos x+3=0$\\
-
-p) $\frac{\sqrt{3}}{\cos ^2 x}-4 \tan x=0$\\
-
-q) $2+\cos 2 x=-5 \sin x$\\
-
-r) $\quad \sin (4 x-1)=0$\\
-
-s) $\quad \sin x \cos x=\frac{1}{2}$\\
-
-t) $\quad \sin ^2 x-\sin x=0$\\
-
-u) $\quad 2 \cos ^2 x=\sin ^2 x-1$\\
-
-v) $\quad \sin x+\cos x=\frac{1+\sqrt{3}}{2}$\\
-
-w) $3 \tan x-1=2 \tan x$\\
-
-x) $\quad \sin x+\sin 2 x=\sin 3 x$
-
+\begin{enumerate}
+    \item  $\quad \sin x=-\frac{1}{2}$\\
+    \item  $\quad \sin x=\frac{\sqrt{2}}{2}$\\
+    \item  $\quad \tan x=\frac{\sqrt{3}}{3}$\\
+    \item  $\quad \sin ^2 x=\frac{1}{2}$\\
+    \item  $\quad \cos \left(\frac{\pi}{4}-x\right)=1$\\
+    \item  $\quad \sin \left(\frac{\pi}{3}-x\right)=-\frac{1}{2}$\\
+    \item  $2 \sin ^2 x=\sqrt{2} \sin x$\\
+    \item  $\cot ^2 x=-\cot x$\\
+    \item  $\quad \sin ^2 x-\cos ^2 x+\sin x=0$\\
+    \item  $\quad 2 \tan x-3 \cot x=1$\\
+    \item  $\quad 3 \tan ^2 x+4 \sqrt{3} \tan x+3=0$\\
+    \item  $\quad \sqrt{3} \cot ^2 x-2 \cot x-\sqrt{3}=0$\\
+    \item  $\frac{\sqrt{3}}{\sin ^2 x}+4 \cot x=0$\\
+    \item  $\frac{\tan x+1}{\tan x-1}=2+\sqrt{3}$\\
+    \item  $2 \cos ^2 x-7 \cos x+3=0$\\
+    \item  $\frac{\sqrt{3}}{\cos ^2 x}-4 \tan x=0$\\
+    \item  $2+\cos 2 x=-5 \sin x$\\ 
+    \item  $\quad \sin (4 x-1)=0$\\
+    \item  $\quad \sin x \cos x=\frac{1}{2}$\\
+    \item  $\quad \sin ^2 x-\sin x=0$\\
+    \item  $\quad 2 \cos ^2 x=\sin ^2 x-1$\\ 
+    \item  $\quad \sin x+\cos x=\frac{1+\sqrt{3}}{2}$\\
+    \item  $3 \tan x-1=2 \tan x$\\
+    \item  $\quad \sin x+\sin 2 x=\sin 3 x$
+\end{enumerate}
 
 \subsection{Geometric equations}
 
-$$
-\begin{aligned}
-&\mathrm{S}_n=a_1+a_1 r+a_1 r^2+a_1 r^3+\cdots+a_1 r^{n-1} \\
+%$$
+%\begin{aligned}
+\begin{enumerate}
 
-&\mathrm{~S}_n=a_1 r+a_1 r^2+a_1 r^3+\cdots+a_1 r^{n-1}+a_1 r^n \\
+  \item &\mathrm{S}_n=a_1+a_1 r+a_1 r^2+a_1 r^3+\cdots+a_1 r^{n-1} \\
 
-&\mathrm{~S}_{\mathrm{n}}-\mathrm{rS}_{\mathrm{n}}=\mathrm{a}_1-\mathrm{a}_1 \mathrm{r}^{\mathrm{n}} \\
+    \item &\mathrm{~S}_n=a_1 r+a_1 r^2+a_1 r^3+\cdots+a_1 r^{n-1}+a_1 r^n \\
 
-&\mathrm{S}_{\mathrm{n}}(1-\mathrm{r})=\mathrm{a}_1\left(1-\mathrm{r}^{\mathrm{n}}\right) \\
+    \item &\mathrm{~S}_{\mathrm{n}}-\mathrm{rS}_{\mathrm{n}}=\mathrm{a}_1-\mathrm{a}_1 \mathrm{r}^{\mathrm{n}} \\
+    
+    \item &\mathrm{S}_{\mathrm{n}}(1-\mathrm{r})=\mathrm{a}_1\left(1-\mathrm{r}^{\mathrm{n}}\right) \\
 
-&\mathrm{S}_{\mathrm{n}}=\frac{\mathrm{a}_1\left(1-\mathrm{r}^{\mathrm{n}}\right)}{(1-\mathrm{r})}\\
+    \item &\mathrm{S}_{\mathrm{n}}=\frac{\mathrm{a}_1\left(1-\mathrm{r}^{\mathrm{n}}\right)}{(1-\mathrm{r})}\\
 
-\end{aligned}
-$$
+\end{enumerate}
+%\end{aligned}
+%$$
 
 
 \subsection{Complex numbers}
+\begin{enumerate}
 
-\textbf{LR-C network}
+\item \textbf{LR-C network}
 
 $z=a+j b=r(\cos \theta+j \sin \theta)=r \angle \theta$
 
@@ -89,7 +70,7 @@ where $j^2=-1$ Modulus, $r=|z|=\sqrt{ }\left(a^2+b^2\right)$
 Argument, $\theta=\arg z=\tan ^{-1} \frac{b}{a}$\\
 
 
-\textbf{LR-CR network}
+\item\textbf{LR-CR network}
 
 
 Addition: $(a+j b)+(c+j b)=(a+c)+j(b+d)$
@@ -107,7 +88,7 @@ Multiplication: $z_1 z_2=r_1 r_2 \angle\left(\theta_1+\theta_2\right)$
 
 and Division: $\frac{z_1}{z_2}=\frac{r_1}{r_2} \angle\left(\theta_1-\theta_2\right)$\\
 
-\textbf{De Moivre's theorem:}
+\item\textbf{De Moivre's theorem:}
 $[r \angle \theta]^n=r^n \angle n \theta=r^n(\cos n \theta+j \sin n \theta)$
 $$
 \begin{aligned}
@@ -131,7 +112,7 @@ g & h
 \end{array}\right|
 \end{aligned}
 $$
-
+\end{enumerate}
 
 \subsection{Fourier Series Equations}
 $$
@@ -213,4 +194,6 @@ $$
 &
 \end{aligned}
 $$
+
+
 \end{document}
